Closed Bug 1888649 Opened 8 months ago Closed 7 months ago

High frequency accessible/tests/<...>.html | ASSERTION: Can't create an accessible for the document!: 'parentDocAcc', file /builds/worker/checkouts/gecko/accessible/base/DocManager.cpp | single tracking bug

Categories

(Core :: Disability Access APIs, defect)

defect

Tracking

()

RESOLVED FIXED
127 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox125 --- wontfix
firefox126 --- fixed
firefox127 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: Jamie)

References

(Regression)

Details

(4 keywords)

Attachments

(3 files)

Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=452799053&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Yn_DKrCmSTCbU1JJjKvCCQ/runs/0/artifacts/public/logs/live_backing.log


TEST-OK | accessible/tests/mochitest/attributes/test_tag.html | took 239ms
[task 2024-03-29T11:46:53.844Z] 11:46:53     INFO - TEST-START | accessible/tests/mochitest/attributes/test_xml-roles.html
[task 2024-03-29T11:46:53.846Z] 11:46:53     INFO - GECKO(8648) | [Parent 3740, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /builds/worker/checkouts/gecko/chrome/nsChromeRegistry.cpp:182
[task 2024-03-29T11:46:53.846Z] 11:46:53     INFO - GECKO(8648) | [Parent 3740, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/checkouts/gecko/chrome/nsChromeProtocolHandler.cpp:73
[task 2024-03-29T11:46:53.860Z] 11:46:53     INFO - GECKO(8648) | [Parent 3740, Main Thread] WARNING: Failed to retarget HTML data delivery to the parser thread.: file /builds/worker/checkouts/gecko/parser/html/nsHtml5StreamParser.cpp:1215
[task 2024-03-29T11:46:54.125Z] 11:46:54     INFO - GECKO(8648) | [Parent 3740, Main Thread] ###!!! ASSERTION: Can't create an accessible for the document!: 'parentDocAcc', file /builds/worker/checkouts/gecko/accessible/base/DocManager.cpp:467
[task 2024-03-29T11:46:54.594Z] 11:46:54     INFO -  Initializing stack-fixing for the first stack frame, this may take a while...
[task 2024-03-29T11:47:19.417Z] 11:47:19     INFO - GECKO(8648) | #01: NS_DebugBreak(unsigned int, char const*, char const*, char const*, int) [xpcom/base/nsDebugImpl.cpp:491]
[task 2024-03-29T11:47:19.423Z] 11:47:19     INFO - GECKO(8648) | #02: mozilla::a11y::DocManager::CreateDocOrRootAccessible(mozilla::dom::Document*) [accessible/base/DocManager.cpp:467]
[task 2024-03-29T11:47:19.423Z] 11:47:19     INFO - GECKO(8648) | #03: mozilla::a11y::DocManager::GetDocAccessible(mozilla::PresShell const*) [accessible/base/DocManager.cpp:71]
[task 2024-03-29T11:47:19.424Z] 11:47:19     INFO - GECKO(8648) | #04: nsAccessibilityService::ContentRemoved(mozilla::PresShell*, nsIContent*) [accessible/base/nsAccessibilityService.cpp:704]
[task 2024-03-29T11:47:19.425Z] 11:47:19     INFO - GECKO(8648) | #05: mozilla::PresShell::NativeAnonymousContentRemoved(nsIContent*) [layout/base/PresShell.cpp:2156]
[task 2024-03-29T11:47:19.426Z] 11:47:19     INFO - GECKO(8648) | #06: mozilla::FrameDestroyContext::~FrameDestroyContext() [layout/generic/nsIFrame.cpp:232]
[task 2024-03-29T11:47:19.426Z] 11:47:19     INFO - GECKO(8648) | #07: nsCSSFrameConstructor::ContentRemoved(nsIContent*, nsIContent*, nsCSSFrameConstructor::RemoveFlags) [layout/base/nsCSSFrameConstructor.cpp:7516]
[task 2024-03-29T11:47:19.427Z] 11:47:19     INFO - GECKO(8648) | #08: nsCSSFrameConstructor::RecreateFramesForContent(nsIContent*, nsCSSFrameConstructor::InsertionKind) [layout/base/nsCSSFrameConstructor.cpp:8441]
[task 2024-03-29T11:47:19.428Z] 11:47:19     INFO - GECKO(8648) | #09: mozilla::RestyleManager::ProcessRestyledFrames(nsStyleChangeList&) [layout/base/RestyleManager.cpp:1606]
[task 2024-03-29T11:47:19.429Z] 11:47:19     INFO - GECKO(8648) | #10: mozilla::RestyleManager::DoProcessPendingRestyles(mozilla::ServoTraversalFlags) [layout/base/RestyleManager.cpp:3284]
[task 2024-03-29T11:47:19.430Z] 11:47:19     INFO - GECKO(8648) | #11: mozilla::RestyleManager::ProcessPendingRestyles() [layout/base/RestyleManager.cpp:3370]
[task 2024-03-29T11:47:19.431Z] 11:47:19     INFO - GECKO(8648) | #12: mozilla::PresShell::DoFlushPendingNotifications(mozilla::ChangesToFlush) [layout/base/PresShell.cpp:4372]
[task 2024-03-29T11:47:19.432Z] 11:47:19     INFO - GECKO(8648) | #13: nsRefreshDriver::TickObserverArray(unsigned int, mozilla::TimeStamp) [layout/base/nsRefreshDriver.cpp:2506]
[task 2024-03-29T11:47:19.432Z] 11:47:19     INFO - GECKO(8648) | #14: nsRefreshDriver::Tick(mozilla::layers::BaseTransactionId<mozilla::VsyncIdType>, mozilla::TimeStamp, nsRefreshDriver::IsExtraTick) [layout/base/nsRefreshDriver.cpp:2736]
[task 2024-03-29T11:47:19.433Z] 11:47:19     INFO - GECKO(8648) | #15: mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/layout/base/nsRefreshDriver.cpp:1833:15'>::Run() [xpcom/threads/nsThreadUtils.h:549]
[task 2024-03-29T11:47:19.434Z] 11:47:19     INFO - GECKO(8648) | #16: mozilla::RunnableTask::Run() [xpcom/threads/TaskController.cpp:579]
[task 2024-03-29T11:47:19.435Z] 11:47:19     INFO - GECKO(8648) | #17: mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex &> const&) [xpcom/threads/TaskController.cpp:905]
[task 2024-03-29T11:47:19.436Z] 11:47:19     INFO - GECKO(8648) | #18: mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex &> const&) [xpcom/threads/TaskController.cpp:728]
[task 2024-03-29T11:47:19.437Z] 11:47:19     INFO - GECKO(8648) | #19: mozilla::TaskController::ProcessPendingMTTask(bool) [xpcom/threads/TaskController.cpp:514]
[task 2024-03-29T11:47:19.438Z] 11:47:19     INFO - GECKO(8648) | #20: mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:232:7'>::Run() [xpcom/threads/nsThreadUtils.h:549]
[task 2024-03-29T11:47:19.439Z] 11:47:19     INFO - GECKO(8648) | #21: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1203]
[task 2024-03-29T11:47:19.439Z] 11:47:19     INFO - GECKO(8648) | #22: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:480]
[task 2024-03-29T11:47:19.440Z] 11:47:19     INFO - GECKO(8648) | #23: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:85]
[task 2024-03-29T11:47:19.441Z] 11:47:19     INFO - GECKO(8648) | #24: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:370]
[task 2024-03-29T11:47:19.442Z] 11:47:19     INFO - GECKO(8648) | #25: MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:364]
[task 2024-03-29T11:47:19.442Z] 11:47:19     INFO - GECKO(8648) | #26: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:346]
[task 2024-03-29T11:47:19.443Z] 11:47:19     INFO - GECKO(8648) | #27: nsBaseAppShell::Run() [widget/nsBaseAppShell.cpp:150]
[task 2024-03-29T11:47:19.444Z] 11:47:19     INFO - GECKO(8648) | #28: nsAppShell::Run() [widget/windows/nsAppShell.cpp:822]
[task 2024-03-29T11:47:19.444Z] 11:47:19     INFO - GECKO(8648) | #29: nsAppStartup::Run() [toolkit/components/startup/nsAppStartup.cpp:297]
[task 2024-03-29T11:47:19.445Z] 11:47:19     INFO - GECKO(8648) | #30: XREMain::XRE_mainRun() [toolkit/xre/nsAppRunner.cpp:5746]
<...>
INFO - GECKO(8648) | #23: mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:232:7'>::Run() [xpcom/threads/nsThreadUtils.h:549]
[task 2024-03-29T11:47:22.318Z] 11:47:22     INFO - GECKO(8648) | #24: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1203]
[task 2024-03-29T11:47:22.319Z] 11:47:22     INFO - GECKO(8648) | #25: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:480]
[task 2024-03-29T11:47:22.319Z] 11:47:22     INFO - GECKO(8648) | #26: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:85]
[task 2024-03-29T11:47:22.320Z] 11:47:22     INFO - GECKO(8648) | #27: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:370]
[task 2024-03-29T11:47:22.320Z] 11:47:22     INFO - GECKO(8648) | #28: MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:364]
[task 2024-03-29T11:47:22.321Z] 11:47:22     INFO - GECKO(8648) | #29: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:346]
[task 2024-03-29T11:47:22.321Z] 11:47:22     INFO - GECKO(8648) | #30: nsBaseAppShell::Run() [widget/nsBaseAppShell.cpp:150]
[task 2024-03-29T11:47:22.322Z] 11:47:22     INFO - GECKO(8648) | #31: nsAppShell::Run() [widget/windows/nsAppShell.cpp:822]
[task 2024-03-29T11:47:22.322Z] 11:47:22     INFO - GECKO(8648) | #32: nsAppStartup::Run() [toolkit/components/startup/nsAppStartup.cpp:297]
[task 2024-03-29T11:47:22.323Z] 11:47:22     INFO - GECKO(8648) | #33: XREMain::XRE_mainRun() [toolkit/xre/nsAppRunner.cpp:5746]
[task 2024-03-29T11:47:22.323Z] 11:47:22     INFO - GECKO(8648) | #34: XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/nsAppRunner.cpp:5958]
[task 2024-03-29T11:47:22.324Z] 11:47:22     INFO - GECKO(8648) | #35: XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/nsAppRunner.cpp:6015]
[task 2024-03-29T11:47:22.324Z] 11:47:22     INFO - GECKO(8648) | #36: mozilla::BootstrapImpl::XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/Bootstrap.cpp:45]
[task 2024-03-29T11:47:22.325Z] 11:47:22     INFO - GECKO(8648) | #37: NS_internal_main(int, char**, char**) [browser/app/nsBrowserApp.cpp:445]
[task 2024-03-29T11:47:22.325Z] 11:47:22     INFO - GECKO(8648) | #38: wmain(int, wchar_t**) [toolkit/xre/nsWindowsWMain.cpp:174]
[task 2024-03-29T11:47:22.326Z] 11:47:22     INFO - GECKO(8648) | #39: __scrt_common_main_seh() [/builds/worker/workspace/obj-build/browser/app/D:/a/_work/1/s/src/vctools/crt/vcstartup/src/startup/exe_common.inl:288]
[task 2024-03-29T11:47:22.326Z] 11:47:22     INFO - GECKO(8648) | #40: BaseThreadInitThunk [C:\Windows\System32\KERNEL32.DLL + 0x17ba9]
[task 2024-03-29T11:47:22.327Z] 11:47:22     INFO - GECKO(8648) | #41: RtlInitializeExceptionChain [C:\Windows\SYSTEM32\ntdll.dll + 0x6bdab]
[task 2024-03-29T11:47:22.327Z] 11:47:22     INFO - GECKO(8648) | #42: RtlClearBits [C:\Windows\SYSTEM32\ntdll.dll + 0x6bd2f]
[task 2024-03-29T11:47:22.328Z] 11:47:22     INFO - GECKO(8648) | Loading resource://gre/res/fonts/mathfontUnicode.properties ... Done
[task 2024-03-29T11:47:22.328Z] 11:47:22     INFO - GECKO(8648) | MEMORY STAT | vsize 1436MB | vsizeMaxContiguous 1806MB | residentFast 467MB | heapAllocated 128MB
[task 2024-03-29T11:47:22.329Z] 11:47:22     INFO - GECKO(8648) | [Parent 3740, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005 (NS_ERROR_FAILURE): file /builds/worker/checkouts/gecko/chrome/nsChromeRegistry.cpp:182
[task 2024-03-29T11:47:22.329Z] 11:47:22     INFO - GECKO(8648) | [Parent 3740, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/checkouts/gecko/chrome/nsChromeProtocolHandler.cpp:73
[task 2024-03-29T11:47:22.330Z] 11:47:22     INFO - GECKO(8648) | [Parent 3740, Main Thread] WARNING: Failed to retarget HTML data delivery to the parser thread.: file /builds/worker/checkouts/gecko/parser/html/nsHtml5StreamParser.cpp:1215
[task 2024-03-29T11:47:22.331Z] 11:47:22     INFO - TEST-UNEXPECTED-FAIL | accessible/tests/mochitest/attributes/test_xml-roles.html | assertion count 111 is more than expected 0 assertions
[task 2024-03-29T11:47:22.331Z] 11:47:22     INFO - Buffered messages logged at 11:46:59
[task 2024-03-29T11:47:22.332Z] 11:47:22     INFO - must wait for load
[task 2024-03-29T11:47:22.332Z] 11:47:22     INFO - Buffered messages logged at 11:47:00
[task 2024-03-29T11:47:22.332Z] 11:47:22     INFO - TEST-PASS | accessible/tests/mochitest/attributes/test_xml-roles.html |  for  'nav'  

@Eitan, could you take a look at this high frequency failures? seem to have started after bug 1886227 has landed

Flags: needinfo?(eitan)

It looks like this actually started about a month ago. All of these intermittent test failure bugs involve this "Can't create an accessible for the document!" assertion. The first bug was bug 1879818. This also means this most likely can't be caused by bug 1886227.

All of these failures seem to be on Windows.

I'm suspicious of popover a11y (bug 1870783) which landed around this time. I don't know how that could cause this, though, especially since nothing in accessible/tests/mochitest uses popover.

Blocks: 1889521
Blocks: 1889801

I can't reproduce this locally, so I think we're going to need to land some logging and/or additional assertions to get more info when this occurs. Thoughts:

  • What's the best way of logging here? Is printf enough or will it get swallowed when tests skip most output (as happens on CI)? Or maybe NS_WARNING/NS_WARN_IF?
  • Is it possible that the (non-root) DOM Document is returning null for GetInProcessParentDocument? That's probably worth logging. But then how is it still alive with a PresShell?

Assigning this to myself for now. I have a local, awful patch which adds a bunch of assertions to attempt to track this down. I'm going to hammer try first, but if I fail there, we might have to land it temporarily.

Assignee: nobody → jteh
No longer blocks: 1879818
Duplicate of this bug: 1879818
No longer blocks: 1881654
Duplicate of this bug: 1881654
No longer blocks: 1882265
Duplicate of this bug: 1882265
Duplicate of this bug: 1883180
No longer blocks: 1885786
Duplicate of this bug: 1885786
No longer blocks: 1885817
Duplicate of this bug: 1885817
No longer blocks: 1888456
Duplicate of this bug: 1888456
No longer blocks: 1888075
Duplicate of this bug: 1888075
No longer blocks: 1886803
Duplicate of this bug: 1886803
No longer blocks: 1886682
Duplicate of this bug: 1886682
No longer blocks: 1886470
Duplicate of this bug: 1886470
No longer blocks: 1886468
Duplicate of this bug: 1886468
No longer blocks: 1889139
Duplicate of this bug: 1889139
No longer blocks: 1889041
Duplicate of this bug: 1889041
No longer blocks: 1889040
Duplicate of this bug: 1889040
No longer blocks: 1888763
Duplicate of this bug: 1888763
No longer blocks: 1888762
Duplicate of this bug: 1888762
No longer blocks: 1888752
Duplicate of this bug: 1888752
No longer blocks: 1888719
Duplicate of this bug: 1888719
No longer blocks: 1890159
Duplicate of this bug: 1890159
No longer blocks: 1890127
Duplicate of this bug: 1890127
No longer blocks: 1890105
Duplicate of this bug: 1890105
No longer blocks: 1889801
Duplicate of this bug: 1889801
No longer blocks: 1889521
Duplicate of this bug: 1889521
No longer blocks: 1889141
Duplicate of this bug: 1889141
No longer blocks: 1889140
Duplicate of this bug: 1889140
No longer blocks: 1882742
Duplicate of this bug: 1882742
No longer blocks: 1890520
Duplicate of this bug: 1890520
No longer blocks: 1890392
Duplicate of this bug: 1890392
No longer blocks: 1890176
Duplicate of this bug: 1890176
No longer blocks: 1890161
Duplicate of this bug: 1890161
No longer blocks: 1890160
Duplicate of this bug: 1890160
No longer blocks: 1883180

I ran 21 test jobs and only 1 failed, but that's better than 0. :)

When this happens:

  1. The document in question is not a root document.
  2. It meets all the conditions for DocAccessible creation, including a visible DocShell.
  3. Because it's a non-root document, we get the parent document, which succeeds.
  4. But the parent document has either a null or invisible DocShell! I'm not sure which yet, but I can find out.

The question is: why should we be seeing layout notifications from a document which has a visible DocShell, but its parent document does not? And what changed recently (around 12 Feb) that might have caused this to start occurring when it wasn't before?

Emilio or Daniel, might you have any ideas? I'll keep looking anyway, but thought I'd ask in case something immediate came to mind.

Edit: Clarified regression timeline.

Flags: needinfo?(emilio)
Flags: needinfo?(dholbert)

Not immediate ideas at least... Bug 1624118 landed late January perhaps? But that's a bit of a long-shot, it should only affect object / embed.

Flags: needinfo?(emilio)
Duplicate of this bug: 1881305

(No immediate ideas here either; I don't touch DocShell much, so I'm not sure offhand what edge cases might cause it to be null/invisible or how that might be coming into play here. It's a shame this seems to be windows-only; pernosco would really help here.)

Flags: needinfo?(dholbert)
Severity: S4 → --
Priority: P5 → --

Further details determined from asserts in latest try run:

  1. The document we're getting events from has the URI: moz-extension://0bff9eee-8d6d-41a8-947e-1e4c0fadb573/_generated_background_page.html
    It meets all the conditions for DocAccessible creation, including a visible DocShell.
  2. Its parent document's URI is: chrome://extensions/content/dummy.xhtml
    That one has a DocShell, but the DocShell is invisible.

Since this is a background extension page, shouldn't 1) always be invisible as well?
Failing that, is there some simple way in C++ to detect background extension pages so the a11y engine can just ignore them?

:willdurand, do you know about the intricacies of how extension background pages use DocShells, etc.? Failing that, do you know who I should ask?

Flags: needinfo?(wdurand)
Severity: -- → S3

I'm leaning towards just turning this assertion into a warning. We now know that this is related to background extension pages, which we would expect to be invisible. It's weird that the child document doesn't report as invisible, but given that the parent is invisible, it doesn't make sense to expose the child.

Flags: needinfo?(wdurand) → needinfo?(tomica)

I believe there are DOM apis that adjust behavior based on whether the document is visible (like timers), and changing that for extension background pages might introduce bugs for some extensions.

My advice would be a special handling to ignore this case for accessibility assertions. If you're in the parent process, you can detect the background page by the webextension-view-type attribute on the browser element being "background".

If you're in the child, I'm not sure if the exact information is available, but you could approximate it by checking AddonPolicy from the document's principal, combined with the parent docShell being invisible.
https://searchfox.org/mozilla-central/source/caps/BasePrincipal.h#245

Flags: needinfo?(tomica)

Could https://hg.mozilla.org/mozilla-central/rev/22c6ddd752f4 ("Bug 1875100 - Propagate top level activeness automatically to top descendants") be relevant? It landed on 7 feb, relates to docshell visibility, with exceptions specific to extension pages.

I'm just attaching this here in case we have to debug something like this again in future. It shouldn't be landed.

(In reply to Rob Wu [:robwu] from comment #50)

Could https://hg.mozilla.org/mozilla-central/rev/22c6ddd752f4 ("Bug 1875100 - Propagate top level activeness automatically to top descendants") be relevant? It landed on 7 feb, relates to docshell visibility, with exceptions specific to extension pages.

I'm not sure, but I submitted this try run which reverts this patch to find out. If that try run doesn't fail with the assertion, you're likely correct about the regressing bug.

Attachment #9396791 - Attachment description: Bug 1888649: Warn instead of asserting if we can't get the parent DocAccessible in CreateDocOrRootAccessible. → Bug 1888649: Tweak the assertion when we can't get the parent DocAccessible in CreateDocOrRootAccessible to allow background extension pages.

It's hard to be 100% certain, but the try run does seem to suggest that bug 1875100 is the culprit. I don't see any "Can't create an accessible for the document!" jobs with 40 runs of the relevant job.

Keywords: regression
Regressed by: 1875100

Set release status flags based on info from the regressing bug 1875100

Duplicate of this bug: 1891959
Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1f86f861b25e Tweak the assertion when we can't get the parent DocAccessible in CreateDocOrRootAccessible to allow background extension pages. r=eeejay

Taking a guess, I'd say the reason bug 1875100 changes things here is that now the background extension page's DocShell sometimes reports as active when it didn't before. But I haven't tested that theory and don't really know how, given how intermittent this is.

Status: NEW → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch

:jamie could you add a beta uplift request on this?
We are still in early beta so it would be good to get the fix there too.

Flags: needinfo?(jteh)

Note that this does not impact users; it's only a debug assertion (but that does impact debug tests). Do we still want to uplift given that?

Flags: needinfo?(jteh)
Flags: needinfo?(eitan)
Flags: needinfo?(dmeehan)

Seems like a safe uplift that will reduce intermittent failures then, win/win?

Attachment #9397483 - Flags: approval-mozilla-beta?

beta Uplift Approval Request

  • User impact if declined: No user impact; intermittent failures in tests run on debug builds.
  • Code covered by automated testing: yes
  • Fix verified in Nightly: no
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: not applicable
  • Risk associated with taking this patch: low
  • Explanation of risk level: Changes an assertion; no user impact.
  • String changes made/needed: none
  • Is Android affected?: no

Fair enough. I tend to be super conservative about uplifts unless I'm certain there is user benefit, but I guess this can't do any harm.

Flags: needinfo?(dmeehan)

(In reply to James Teh [:Jamie] from comment #61)

Note that this does not impact users; it's only a debug assertion (but that does impact debug tests). Do we still want to uplift given that?

Thanks, I'll take the uplift to reduce failures since we still have a few weeks of beta and then to release with Fx126
Like dholbert said in Comment 62.
If it was test-only change I could have taken it without a request.

Attachment #9397483 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
See Also: → 1905394
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: