Bug 1888649: Tweak the assertion when we can't get the parent DocAccessible in CreateDocOrRootAccessible to allow background extension pages.  a=dmeehan

Original Revision: https://phabricator.services.mozilla.com/D207497

Differential Revision: https://phabricator.services.mozilla.com/D207938